# aye-aye-sir-face-tracking-

./: .gitignore  CMakeLists.txt  README.md
.claude/: settings.local.json
.claude/rules/: openwolf.md
.github/workflows/: windows.yml
.wolf/: OPENWOLF.md  STATUS.md  anatomy.md  buglog.json  cerebrum.md  identity.md
.wolf/hooks/: _session.json  stop.js
data/effects/: mask.effect
data/locale/: en-US.ini  pt-BR.ini
installer/: README.md  aye-aye-mask.nsi  build-and-install.bat  build-and-package.ps1
scripts/: fetch-models.sh  gen-facemesh-tables.py
src/: facemesh_tables.hpp  frame-grab.cpp  frame-grab.hpp  headpose.cpp  headpose.hpp  landmarks.cpp  landmarks.hpp  mask-filter.cpp  mask-filter.hpp  mask-renderer.cpp  mask-renderer.hpp  plugin-main.cpp  pose.cpp  pose.hpp  smoothing.cpp  smoothing.hpp  tracker.cpp  tracker.hpp
